--- a/templates/partials/projects.hbs
+++ b/templates/partials/projects.hbs
@@ -1,59 +1,77 @@
-<section id ="projects">
-    <div class="projects">
-        <div class = "g-heading">
-            <div class = "g-watermark">
-                Projects
-            </div>
-            <div class = "g-subheading">
-                My Projects
-                <div class = "g-underline">
-                </div>
-            </div>
+<section id="projects">
+  <div class="projects">
+    <div class="g-heading">
+      <div class="g-watermark">
+        Projects
+      </div>
+      <div class="g-subheading">
+        My Projects
+        <div class="g-underline">
         </div>
-        <div class="project-details">
-            <ul id = "project-type" onclick="performAction(event.target.id);">
-                <li><a id ="python">Python</a></li>
-                <li><a id ="nodejs">Node JS</a></li>
-                <li><a id = "api">API</a></li>
-                {{!-- <li><a id = "cli">CLI App</a></li> --}}
-            </ul>
-            <div class="project-info" id = "card">
-                <div class="project-card">
-                    <div class="project-area">
-                        <div class="project-head">
-                            <b>Mail Service</b>
-                        </div>
-                        <div class="project-date">
-                            Dec,2020
-                        </div>
-                        <div class="project-description">
-                           A simple mail service developed using flask and google API. To send mails to anyone from my mail id in particular format.<br>
-                           Technology - Python - Flask
-                        </div>
-                        <div class="project-link1">
-                            <a href= "https://srujana-mail-service.herokuapp.com/" target="_blank" ><b>Visit Live</b></a>
-                        </div>
-                        <div class="project-link2">
-                            <a href= "https://github.com/SRUJANA-PENUGONDA13/Srujana-Mail-Service" target="_blank"><b>View Code On Github</b></a>
-                        </div>
-                    </div>
-                </div>
-                {{!-- <div class="project-card">
-                    <div class="project-area">
-                        <div class="project-head">
-                            <b>IFT Automation</b>
-                        </div>
-                        <div class="project-date">
-                            JAN,2021
-                        </div>
-                        <div class="project-description">
-                            1. Processing of DDTSUTF files and generating DTMU outbound files report over mail <br>
-                            2. Analysis of IFT layouts and generating IFT files <br>
-                            Technology - Python
-                        </div>   
-                    </div>
-                </div> --}}
-            </div>
-        </div>
+      </div>
     </div>
+    <div class="project-details">
+      <ul id="project-type" onclick="performAction(event.target.id);">
+        <li><a id="cliApp">CLI App</a></li>
+        <li><a id="Books and Emotions">Books and Emotions</a></li>
+        <li><a id="BirthdayApp">Birthday App</a></li>
+        <li><a id="api">API</a></li>
+        <li><a id="cashAndStocks">Cash and Stocks</a></li>
+        <li><a id="funWithTriangles">Triangles</a></li>
+      </ul>
+      <div class="project-section" id="card">
+        <div class="section-card">
+          <div class="section-area">
+            <div class="section-head">
+              <b>Buddy Meter</b>
+            </div>
+            <div class="section-date">
+              Sep, 2021
+            </div>
+            <div class="section-description">
+              BuddyMeter is a quiz to on myself to know how well my friends know
+              me and it is developed using node.js
+            </div>
+            <div class="section-link1">
+              <a
+                href="https://replit.com/@PSRUJANA/BuddyMeter?embed=true#index.js"
+                target="_blank"
+              ><b>Visit Live</b></a>
+            </div>
+            <div class="section-link2">
+              <a
+                href="https://replit.com/@PSRUJANA/BuddyMeter#index.js"
+                target="_blank"
+              ><b>View Source Code</b></a>
+            </div>
+          </div>
+        </div>
+        <div class="section-card">
+          <div class="section-area">
+            <div class="section-head">
+              <b>Fun App</b>
+            </div>
+            <div class="section-date">
+              Sep, 2021
+            </div>
+            <div class="section-description">
+              "Fun-App is quiz to test your IQ and developed using node.js",
+            </div>
+            <div class="section-link1">
+              <a
+                href="https://replit.com/@PSRUJANA/Fun-App?embed=true#index.js"
+                target="_blank"
+              ><b>Visit Live</b></a>
+            </div>
+            <div class="section-link2">
+              <a
+                href="https://replit.com/@PSRUJANA/Fun-App#index.js"
+                target="_blank"
+              ><b>View Source Code</b></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
