--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -12,13 +12,13 @@
         {{>about}}
         {{>skills}}
         {{>projects}}
-        {{>experience}}
+        {{>blog}}
         {{>contact}}
       </div>
     </div>
     <script src ="./js/nav.js"></script>
     <script src ="./js/app.js"></script>
-    <script src ="./js/experience.js"></script>
+    <script src ="./js/blog.js"></script>
     <script src ="./js/contact.js"></script>
   </body>
 </html>
