--- a/templates/partials/nav.hbs
+++ b/templates/partials/nav.hbs
@@ -1,21 +1,33 @@
 <div class="left-nav">
-    <div class = "logo">
-        <img src="https://srujanaimage.s3.ap-south-1.amazonaws.com/Srujana.jpeg" alt="Srujana Penugonda">
-        <b><p>SRUJANA PENUGONDA</p></b>
-    </div>
-    <div class ="nav">
-        <ul>
-            <li><a href="#home"><i class="fa fa-home"></i>Home</a></li>
-            <li><a href="#about"><i class="fa fa-user"></i>About</a></li>
-            <li><a href="#skills"><i class="fa fa-list"></i>Skills</a></li>
-            <li><a href="#projects"><i class="fa fa-briefcase"></i>Projects</a></li>
-            <li><a href="#experience" onclick="defaultSlide();" ><i class="fa fa-black-tie"></i>Experience</a></li>
-            <li><a href="#contact"><i class="fa fa-comments"></i>Contact</a></li>
-        </ul>
-    </div>
-    <div class = "contact-info">
-        <a href="https://www.linkedin.com/in/srujana-penugonda-49b9b9148" target="_blank" ><i class="fa fa-linkedin fa-lg"></i></a>
-        <a href="https://github.com/SRUJANA-PENUGONDA13" target="_blank"><i class="fa fa-github fa-lg"></i></a>
-        <a href="https://leetcode.com/Srujana_Penugonda/" target="_blank"><i class="fa fa-code fa-lg" ></i></a>
-    </div>
+  <div class="logo">
+    <img
+      src="https://srujanaimage.s3.ap-south-1.amazonaws.com/Srujana.jpeg"
+      alt="Srujana Penugonda"
+    />
+    <b><p>SRUJANA PENUGONDA</p></b>
+  </div>
+  <div class="nav">
+    <ul>
+      <li><a href="#home"><i class="fa fa-home"></i>Home</a></li>
+      <li><a href="#about"><i class="fa fa-user"></i>About</a></li>
+      <li><a href="#skills"><i class="fa fa-list"></i>Skills</a></li>
+      <li><a href="#projects"><i class="fa fa-briefcase"></i>Projects</a></li>
+      <li><a href="#blog" onclick="defaultSlide();"><i
+            class="fa fa-search"
+          ></i>Blogs</a></li>
+      <li><a href="#contact"><i class="fa fa-comments"></i>Contact</a></li>
+    </ul>
+  </div>
+  <div class="contact-info">
+    <a
+      href="https://www.linkedin.com/in/srujana-penugonda-49b9b9148"
+      target="_blank"
+    ><i class="fa fa-linkedin fa-lg"></i></a>
+    <a href="https://github.com/SRUJANA-PENUGONDA13" target="_blank"><i
+        class="fa fa-github fa-lg"
+      ></i></a>
+    <a href="https://leetcode.com/Srujana_Penugonda/" target="_blank"><i
+        class="fa fa-code fa-lg"
+      ></i></a>
+  </div>
 </div>
