--- a/templates/partials/blog.hbs
+++ b/templates/partials/blog.hbs
@@ -25,8 +25,10 @@
           <ul>
             <li>This blog helps to understand the difference between a Library
               and Framework
-              <br /><br /><a href="https://technical-blog-1.netlify.app/">Read
-                More</a></li>
+              <br /><br /><a
+                href="https://technical-blog-1.netlify.app/"
+                target="_blank"
+              >Read More</a></li>
           </ul>
         </div>
       </div>
@@ -46,7 +48,10 @@
           <ul>
             <li>This blogs helps to installing and setting up git in local
               machine
-              <br /><br /><a href="https://tech-blog-2.netlify.app/">Read More</a></li>
+              <br /><br /><a
+                href="https://tech-blog-2.netlify.app/"
+                target="_blank"
+              >Read More</a></li>
           </ul>
         </div>
       </div>
