Refactor - Updated CLI App links

--- a/templates/partials/projects.hbs
+++ b/templates/partials/projects.hbs
@@ -40,7 +40,7 @@
             </div>
             <div class="section-link2">
               <a
-                href="https://replit.com/@PSRUJANA/BuddyMeter#index.js"
+                href="https://github.com/SRUJANA-PENUGONDA13/Buddy-Meter"
                 target="_blank"
               ><b>View Source Code</b></a>
             </div>
@@ -65,7 +65,7 @@
             </div>
             <div class="section-link2">
               <a
-                href="https://replit.com/@PSRUJANA/Fun-App#index.js"
+                href="https://github.com/SRUJANA-PENUGONDA13/Fun-App"
                 target="_blank"
               ><b>View Source Code</b></a>
             </div>
